# libshv

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
examples/gui/samplegraph/: CMakeLists.txt  histogramgraphwidget.cpp  histogramgraphwidget.h  histogramgraphwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  timelinegraphwidget.cpp  timelinegraphwidget.h  timelinegraphwidget.ui
libshvbroker/: CMakeLists.txt
libshvbroker/src/: aclmanager.cpp  aclmanager.h  aclmanagersqlite.cpp  aclmanagersqlite.h  appclioptions.cpp  appnode.cpp  appnode.h  brokeraclnode.cpp  brokeraclnode.h  brokerapp.cpp  brokerapp.h  brokerappnode.cpp  brokerappnode.h  brokerrootnode.cpp  brokerrootnode.h  clientconnectionnode.cpp  clientshvnode.cpp  clientshvnode.h  currentclientshvnode.cpp  dotbrokernode.cpp  dotbrokernode.h  ldap.cpp  openldap_dynamic.cpp  openldap_dynamic.h  subscriptionsnode.cpp  subscriptionsnode.h  tunnelsecretlist.cpp  tunnelsecretlist.h
libshvbroker/src/rpc/: brokertcpserver.cpp  brokertcpserver.h  clientconnectiononbroker.cpp  clientconnectiononbroker.h  commonrpcclienthandle.cpp  commonrpcclienthandle.h  masterbrokerconnection.cpp  masterbrokerconnection.h  serverconnection.cpp  serverconnection.h  ssl_common.cpp  ssl_common.h  tcpserver.cpp  tcpserver.h  websocketserver.cpp  websocketserver.h
libshvbroker/tests/: test_aclmanager.cpp
libshvchainpack/: CMakeLists.txt
libshvchainpack/c/: CMakeLists.txt  cchainpack.c  ccpcp.c  ccpon.c
libshvchainpack/d/shv/: rpcmessage.d
libshvchainpack/fuzz/: fromChainpack.cpp
libshvchainpack/js/: bint.js  chainpack.js  cpcontext.js  cpon.js  package-lock.json  rpcmessage.js  rpcvalue.js  test.html  test.js  webpack.dev.js  webpack.prod.js
libshvchainpack/src/: abstractstreamreader.cpp  abstractstreamwriter.cpp  accessgrant.cpp  chainpackreader.cpp  chainpackwriter.cpp  cponreader.cpp  cponwriter.cpp  datachange.cpp  exception.cpp  irpcconnection.cpp  metamethod.cpp  metatypes.cpp  rpc.cpp  rpcdriver.cpp  rpcmessage.cpp  rpcvalue.cpp  socketrpcdriver.cpp  utils.cpp
libshvchainpack/src/chainpack/: abstractstreamreader.cpp  abstractstreamreader.h  accessgrant.cpp  accessgrant.h  accesslevel.cpp  chainpack.cpp  chainpackreader.cpp  chainpackreader.h  chainpackwriter.cpp  chainpackwriter.h  cponreader.cpp  cponreader.h  cponwriter.cpp  cponwriter.h  datachange.cpp  datachange.h  exception.cpp  exception.h  irpcconnection.cpp  irpcconnection.h  metamethod.cpp  metamethod.h  metatypes.cpp  metatypes.h  rpc.cpp  rpc.h  rpcdriver.cpp  rpcdriver.h  rpcmessage.cpp  rpcmessage.h  rpcvalue.cpp  rpcvalue.h  socketrpcdriver.cpp  socketrpcdriver.h  tunnelctl.cpp  tunnelctl.h  utils.cpp  utils.h
libshvchainpack/tests/: rpcvalue.cpp  test_accessgrant.cpp  test_chainpack.cpp  test_cpon.cpp  test_crc32.cpp  test_rpcmessage.cpp  test_rpcvalue.cpp
libshvcore/: CMakeLists.txt
libshvcore/src/: exception.cpp  log.cpp  string.cpp  string.h  stringview.cpp  stringview.h  utils.cpp
libshvcore/src/utils/: abstractshvjournal.cpp  clioptions.cpp  crypt.cpp  getlog.cpp  patternmatcher.cpp  shvalarm.cpp  shvfilejournal.cpp  shvfilejournal.h  shvgetlogparams.cpp  shvjournalcommon.cpp  shvjournalcommon.h  shvjournalentry.cpp  shvjournalfilereader.cpp  shvjournalfilereader.h  shvjournalfilewriter.cpp  shvjournalfilewriter.h  shvlogfilereader.cpp  shvlogfilter.cpp  shvlogheader.cpp  shvlogheader.h  shvlogrpcvaluereader.cpp  shvlogrpcvaluereader.h  shvlogtypeinfo.cpp  shvlogtypeinfo.h  shvmemoryjournal.cpp  shvmemoryjournal.h  shvpath.cpp  shvtypeinfo.cpp  shvtypeinfo.h  shvurl.cpp  shvurl.h  versioninfo.cpp
libshvcore/tests/: test_clioptions.cpp  test_crypt.cpp  test_getlog.cpp  test_shvlog.cpp  test_shvpath.cpp  test_shvtypeinfo.cpp  test_utils.cpp
libshvcoreqt/: CMakeLists.txt
libshvcoreqt/src/: exception.cpp  log.cpp  log.h  rpc.cpp  utils.cpp
libshvcoreqt/src/data/: rpcsqlresult.cpp  valuechange.cpp  valuechange.h
libshvcoreqt/src/utils/: clioptions.cpp  versioninfo.cpp
libshvcoreqt/tests/: test_rpc_variant.cpp  test_utils.cpp
libshviotqt/: CMakeLists.txt
libshviotqt/src/: utils.cpp
libshviotqt/src/acl/: aclmountdef.cpp  aclpassword.cpp  aclpassword.h  aclrole.cpp  aclrole.h  aclroleaccessrules.cpp  aclroleaccessrules.h  acluser.cpp
libshviotqt/src/node/: filenode.cpp  localfsnode.cpp  propertynode.cpp  shvnode.cpp  shvnode.h  shvnodetree.cpp
libshviotqt/src/rpc/: clientappclioptions.cpp  clientconnection.cpp  clientconnection.h  deviceappclioptions.cpp  deviceconnection.cpp  localsocket.cpp  rpccall.cpp  rpcresponsecallback.cpp  rpcresponsecallback.h  serialportsocket.cpp  serialportsocket.h  serverconnection.cpp  socket.cpp  socketrpcconnection.cpp  tcpserver.cpp  websocket.cpp
libshviotqt/src/utils/: network.cpp
libshviotqt/tests/: test_frame_reader.cpp
libshviotqt/tests/serialportsocket/: mockrpcconnection.cpp  mockrpcconnection.h  mockserialport.cpp  mockserialport.h  test_serialportsocket.cpp
libshvvisu/: CMakeLists.txt  libshvvisu.cs_CZ.ts  libshvvisu.de_DE.ts  libshvvisu.fi_FI.ts  libshvvisu.hu_HU.ts  libshvvisu.it_IT.ts  libshvvisu.nl_BE.ts  libshvvisu.pl_PL.ts  libshvvisu.sk_SK.ts  libshvvisu.sr_RS.ts  libshvvisu_cs_CZ.ts  libshvvisu_de_DE.ts  libshvvisu_fi_FI.ts  libshvvisu_hu_HU.ts  libshvvisu_it_IT.ts  libshvvisu_nl_BE.ts  libshvvisu_nl_NL.ts  libshvvisu_pl_PL.ts  libshvvisu_sk_SK.ts  libshvvisu_sr_RS.ts
libshvvisu/images/: images.qrc
libshvvisu/src/logview/: dataviewfilterselector.cpp  dataviewfilterselector.ui  dataviewwidget.cpp  dataviewwidget.h  dataviewwidget.ui  dlgloginspector.cpp  dlgloginspector.h  dlgloginspector.ui  logmodel.cpp  logmodel.h  logsortfilterproxymodel.cpp  logsortfilterproxymodel.h  remotefileloader.cpp  remotefileloader.h
libshvvisu/src/logwidget/: errorlogmodel.cpp  logtablemodelbase.cpp  logwidget.cpp  logwidget.h  logwidget.ui
libshvvisu/src/svgscene/: graphicsview.cpp  groupitem.cpp  rectitem.cpp  saxhandler.cpp  simpletextitem.cpp  types.cpp  visucontroller.cpp
libshvvisu/src/timeline/: channelfilter.cpp  (+26 more)
libshvvisu/tests/: test_timeline.cpp
(+185 files in other folders)
